reuse dynamic API form in dialog and unwrap the URI